# cfn-sphere

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  bootstrap.py  build.py  build_and_upload_packages.sh  circle.yml  nose2.cfg  pyproject.toml  scripts.py  setup.cfg  snakepit.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
res/templates/: default-webapp.json
src/cfn_sphere/: exceptions.py  file_loader.py  util.py
src/cfn_sphere/aws/: ssm.py
src/cfn_sphere/resources/: template-sceleton.yml
src/cfn_sphere/stack_configuration/: __init__.py  parameter_resolver.py
src/integrationtest/python/: aws_kms_tests.py  create-stacks_tests.py  stack_management_tests.py
src/integrationtest/resources/: app.yml  ec2-instance.json  ec2-instance.yml  my-text-file-parameter.txt  myapp.yml  prod.yml  queues-example.yml  security-group.yml  security_group.json  stacks.yml  stacks.yml.example  vpc.json  vpc.yml
src/main/python/: CfnStack.py  ec2.py  entities  entities.py  stack.yaml
src/main/resources/: queue.yml  stack_config.yml.jinja2  template-sceleton.json  template.yml
src/main/scripts/: cf  cfn-sphere-api.py  cfn-sync
src/test/: cli_tests.py  cloudformation_template_tests.py  file_generator_tests.py  file_loader_tests.py  stack_action_handler_tests.py  util_tests.py
src/test/aws_tests/: cfn_tests.py  ec2_tests.py  kms_tests.py  s3_tests.py  ssm_tests.py
src/test/resources/: example-stack-config.yml
src/test/stack_configuration_tests/: config_tests.py  dependency_resolver_tests.py  parameter_resolver_tests.py
src/unittest/python/: cli_tests.py  (+21 more)
(+93 files in other folders)
