[tool.poetry]
name = "cfn-sphere"
version = "1.0.5"
description = ""
authors = ["Marco Hoyer"]
license = "Apache License 2.0"
packages = [
    { include = "src/main/python/cfn_sphere" },
]

[tool.poetry.scripts]
cf = 'cfn_sphere.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.16.40"
requests = "^2.25.1"
mock = "^4.0.3"
moto = "^1.3.16"
six = "^1.15.0"
click = "^7.1.2"
PyYAML = "^5.3.1"
networkx = "^2.5"
prettytable = "^2.0.0"
GitPython = "^3.1.11"
jmespath = "^0.10.0"
Jinja2 = "^2.11.2"
nose2 = "^0.9.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
